--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>testing rn</title>
+    <title>raks | Software Developer</title>
     <style>
         .follow-ball {
             position: absolute;
@@ -59,11 +59,13 @@
         });
 
         function animate() {
-            ballX += (mouseX - ballX) * 0.8;
-            ballY += (mouseY - ballY) * 0.8;
+            ballX += (mouseX - ballX) * 0.3;
+            ballY += (mouseY - ballY) * 0.3;
             followBall.style.transform = `translate(${ballX}px, ${ballY}px)`;
             requestAnimationFrame(animate);
         }
+
+        followBall.style.transform = `translate(${mouseX}px, ${mouseY}px)`;  // Start at cursor position
         animate();
 
         function copyToClipboard(text) {
